# kitemmodels

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5ItemModelsConfig.cmake.in  KF6ItemModelsConfig.cmake.in  README.md  kitemmodels.categories  metainfo.yaml
autotests/: CMakeLists.txt  concatenaterowstest.qml  dependencies.qml  iter_qml.cpp  kaggregate_qml.cpp  kcolumnheadersmodeltest.cpp  kconcatenaterows_qml.cpp  kconcatenaterowsproxymodeltest.cpp  kdescendantentitiesproxymodeltest.cpp  kdescendantsproxymodel_smoketest.cpp  kdescendantsproxymodeltest.cpp  kextracolumnsproxymodeltest.cpp  klinkitemselectionmodeltest.cpp  klinkitemselectionmodeltest.h  kmodelindexobservertest_qml.cpp  kmodelindexproxymappertest.cpp  knumbermodeltest.cpp  krearrangecolumnsproxymodeltest.cpp  krecursivefilterproxymodeltest.cpp  krolenames_qml.cpp  krolenamesmodeltest.cpp  kselectionproxymodel_smoketest.cpp  kselectionproxymodeltest.cpp  kselectionproxymodeltestsuite.cpp  kselectionproxymodeltestsuite.h  ksortfilterproxymodel_qml.cpp  ksortfilterproxyroleoptimizedlistmodeltest.cpp  pythontest.py  test_model_helpers.h  testmodelqueuedconnections.cpp
autotests/bihash/: CMakeLists.txt  benchmarks.cpp  functionalitytest.cpp
autotests/proxymodeltestapp/: CMakeLists.txt  breadcrumbdirectionwidget.cpp  breadcrumbdirectionwidget.h  breadcrumbnavigationwidget.cpp  breadcrumbswidget.cpp  checkablewidget.cpp  descendantpmwidget.cpp  kidentityproxymodelwidget.cpp  kreparentingproxymodel.cpp  lessthanwidget.cpp  mainwindow.cpp  mainwindow.h  matchcheckingwidget.cpp  matchcheckingwidget.h  modelcommanderwidget.cpp  modelcommanderwidget.h  proxyitemselectionwidget.cpp  proxymodeltestwidget.cpp  proxymodeltestwidget.h  recursivefilterpmwidget.cpp  reparentingpmwidget.cpp  scriptablereparentingwidget.cpp  selection.qml  selectioninqmlwidget.cpp  selectionpmwidget.cpp  selectionpmwidget.h
autotests/proxymodeltestsuite/: CMakeLists.txt  dynamictreemodel.cpp  dynamictreemodel.h  dynamictreewidget.cpp  dynamictreewidget.h  eventloggerregister.cpp  eventloggerregister.h  indexfinder.h  modelcommander.cpp  modelcommander.h  modeldumper.cpp  modeldumper.h  modeleventlogger.cpp  modeleventlogger.h  modelselector.cpp  modelselector.h  modelspy.cpp  modelspy.h  modeltest.cpp  modeltest.h  persistentchangelist.h  proxymodeltest.cpp  proxymodeltest.h
autotests/proxymodeltestsuite/templates/: datachanged.cpp  init.cpp  layoutchanged.cpp  main.cpp  modelreset.cpp  rowsinserted.cpp  rowsremoved.cpp
docs/: Doxyfile.local
src/: CMakeLists.txt  kbihash_p.h  kbreadcrumbselectionmodel.cpp  kbreadcrumbselectionmodel.h  kcheckableproxymodel.cpp  kcheckableproxymodel.h  kconcatenaterowsproxymodel.cpp  kconcatenaterowsproxymodel.h  kdescendantsproxymodel.cpp  kdescendantsproxymodel.h  kextracolumnsproxymodel.cpp  kextracolumnsproxymodel.h  klinkitemselectionmodel.cpp  klinkitemselectionmodel.h  kmodelindexproxymapper.cpp  kmodelindexproxymapper.h  krearrangecolumnsproxymodel.cpp  krearrangecolumnsproxymodel.h  krecursivefilterproxymodel.cpp  krecursivefilterproxymodel.h  kselectionproxymodel.cpp  kselectionproxymodel.h  kvoidpointerfactory_p.h
src/core/: CMakeLists.txt  kbihash_p.h  kbreadcrumbselectionmodel.cpp  kbreadcrumbselectionmodel.h  kcheckableproxymodel.cpp  kcheckableproxymodel.h  kcolumnheadersmodel.cpp  kcolumnheadersmodel.h  kconcatenaterowsproxymodel.cpp  kconcatenaterowsproxymodel.h  kdescendantsproxymodel.cpp  kdescendantsproxymodel.h  kextracolumnsproxymodel.cpp  kextracolumnsproxymodel.h  kitemmodels-index.qdoc  kitemmodels.qdoc  kitemmodels.qdocconf  klinkitemselectionmodel.cpp  klinkitemselectionmodel.h  kmodelindexproxymapper.cpp  kmodelindexproxymapper.h  knumbermodel.cpp  knumbermodel.h  krearrangecolumnsproxymodel.cpp  krearrangecolumnsproxymodel.h  krecursivefilterproxymodel.cpp  krecursivefilterproxymodel.h  krolenamesmodel.cpp  krolenamesmodel.h  kselectionproxymodel.cpp  kselectionproxymodel.h  ksortfilterproxyroleoptimizedlistmodel.cpp  ksortfilterproxyroleoptimizedlistmodel.h  kvoidpointerfactory_p.h
src/qml/: CMakeLists.txt  Iter.qml  coreregistration.h  iter_impl.js  kaggregate.cpp  kaggregate.h  kaggregateevery.cpp  kaggregateevery.h  kaggregatesome.cpp  kaggregatesome.h  kconcatenaterowsproxymodel_qml.cpp  kconcatenaterowsproxymodel_qml.h  kdescendantsproxymodel_qml.cpp  kdescendantsproxymodel_qml.h  kitemmodelsqml.qdoc  kitemmodelsqml.qdocconf  kitemmodelsqml.qrc  kmodelindexobserver.cpp  kmodelindexobserver.h  knumbermodel.cpp  knumbermodel.h  krolenames.cpp  krolenames.h  ksortfilterproxymodel.cpp  ksortfilterproxymodel.h  plugin.cpp  plugin.h  qmldeprecated.h  qmldir  types.h
src/qml/aggregate/: kaggregate.cpp  kaggregate.h  kaggregateevery.cpp  kaggregateevery.h  kaggregatesome.cpp  kaggregatesome.h
tests/: CMakeLists.txt  rearrangecolumns.cpp
tests/proxymodeltestapp/: CMakeLists.txt  breadcrumbdirectionwidget.cpp  breadcrumbdirectionwidget.h  breadcrumbnavigationwidget.cpp  breadcrumbnavigationwidget.h  breadcrumbswidget.cpp  breadcrumbswidget.h  checkablewidget.cpp  checkablewidget.h  descendantpmwidget.cpp  descendantpmwidget.h  descendantqmltree.cpp  descendantqmltree.h  dynamictreewidget.cpp  dynamictreewidget.h  kidentityproxymodelwidget.cpp  kidentityproxymodelwidget.h  kreparentingproxymodel.cpp  kreparentingproxymodel.h  lessthanwidget.cpp  lessthanwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  matchcheckingwidget.cpp  matchcheckingwidget.h  modelcommanderwidget.cpp  modelcommanderwidget.h  proxyitemselectionwidget.cpp  proxyitemselectionwidget.h  proxymodeltestwidget.cpp  proxymodeltestwidget.h  recursivefilterpmwidget.cpp  recursivefilterpmwidget.h  reparentingpmwidget.cpp  reparentingpmwidget.h  scriptablereparentingwidget.cpp  scriptablereparentingwidget.h  selection.qml  selectioninqmlwidget.cpp  (+6 more)
tests/qml/: columnheaders.qml  concatenaterows.qml
tests/qml/KModelIndexObserver/ComboBoxWithIconRole/: ComboBoxWithIconRole.qml  main.qml
tests/qml/KRoleNamesModel/: InteractiveInspector.qml
